; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/host/extr_minilua.c_lua_getinfo.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/host/extr_minilua.c_lua_getinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i64, %struct.TYPE_15__* }
%struct.TYPE_15__ = type { i64 }
%struct.TYPE_14__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_13__*, i8*, %struct.TYPE_14__*)* @lua_getinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lua_getinfo(%struct.TYPE_13__* %0, i8* %1, %struct.TYPE_14__* %2) #0 {
  %4 = alloca %struct.TYPE_13__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_14__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_15__*, align 8
  %10 = alloca i64, align 8
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %4, align 8
  store i8* %1, i8** %5, align 8
  store %struct.TYPE_14__* %2, %struct.TYPE_14__** %6, align 8
  store i32* null, i32** %8, align 8
  store %struct.TYPE_15__* null, %struct.TYPE_15__** %9, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp eq i32 %13, 62
  br i1 %14, label %15, label %32

15:                                               ; preds = %3
  %16 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = sub nsw i64 %18, 1
  store i64 %19, i64* %10, align 8
  %20 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %21 = load i64, i64* %10, align 8
  %22 = call i32 @ttisfunction(i64 %21)
  %23 = call i32 @luai_apicheck(%struct.TYPE_13__* %20, i32 %22)
  %24 = load i8*, i8** %5, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %5, align 8
  %26 = load i64, i64* %10, align 8
  %27 = call i32* @clvalue(i64 %26)
  store i32* %27, i32** %8, align 8
  %28 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %30, -1
  store i64 %31, i64* %29, align 8
  br label %50

32:                                               ; preds = %3
  %33 = load %struct.TYPE_14__*, %struct.TYPE_14__** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %49

37:                                               ; preds = %32
  %38 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %38, i32 0, i32 1
  %40 = load %struct.TYPE_15__*, %struct.TYPE_15__** %39, align 8
  %41 = load %struct.TYPE_14__*, %struct.TYPE_14__** %6, align 8
  %42 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %40, i64 %43
  store %struct.TYPE_15__* %44, %struct.TYPE_15__** %9, align 8
  %45 = load %struct.TYPE_15__*, %struct.TYPE_15__** %9, align 8
  %46 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %45, i32 0, i32 0
  %47 = load i64, i64* %46, align 8
  %48 = call i32* @clvalue(i64 %47)
  store i32* %48, i32** %8, align 8
  br label %49

49:                                               ; preds = %37, %32
  br label %50

50:                                               ; preds = %49, %15
  %51 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %52 = load i8*, i8** %5, align 8
  %53 = load %struct.TYPE_14__*, %struct.TYPE_14__** %6, align 8
  %54 = load i32*, i32** %8, align 8
  %55 = load %struct.TYPE_15__*, %struct.TYPE_15__** %9, align 8
  %56 = call i32 @auxgetinfo(%struct.TYPE_13__* %51, i8* %52, %struct.TYPE_14__* %53, i32* %54, %struct.TYPE_15__* %55)
  store i32 %56, i32* %7, align 4
  %57 = load i8*, i8** %5, align 8
  %58 = call i64 @strchr(i8* %57, i8 signext 102)
  %59 = icmp ne i64 %58, 0
  br i1 %59, label %60, label %78

60:                                               ; preds = %50
  %61 = load i32*, i32** %8, align 8
  %62 = icmp eq i32* %61, null
  br i1 %62, label %63, label %68

63:                                               ; preds = %60
  %64 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %65 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %64, i32 0, i32 0
  %66 = load i64, i64* %65, align 8
  %67 = call i32 @setnilvalue(i64 %66)
  br label %75

68:                                               ; preds = %60
  %69 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %70 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %71 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %70, i32 0, i32 0
  %72 = load i64, i64* %71, align 8
  %73 = load i32*, i32** %8, align 8
  %74 = call i32 @setclvalue(%struct.TYPE_13__* %69, i64 %72, i32* %73)
  br label %75

75:                                               ; preds = %68, %63
  %76 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %77 = call i32 @incr_top(%struct.TYPE_13__* %76)
  br label %78

78:                                               ; preds = %75, %50
  %79 = load i8*, i8** %5, align 8
  %80 = call i64 @strchr(i8* %79, i8 signext 76)
  %81 = icmp ne i64 %80, 0
  br i1 %81, label %82, label %86

82:                                               ; preds = %78
  %83 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %84 = load i32*, i32** %8, align 8
  %85 = call i32 @collectvalidlines(%struct.TYPE_13__* %83, i32* %84)
  br label %86

86:                                               ; preds = %82, %78
  %87 = load i32, i32* %7, align 4
  ret i32 %87
}

declare dso_local i32 @luai_apicheck(%struct.TYPE_13__*, i32) #1

declare dso_local i32 @ttisfunction(i64) #1

declare dso_local i32* @clvalue(i64) #1

declare dso_local i32 @auxgetinfo(%struct.TYPE_13__*, i8*, %struct.TYPE_14__*, i32*, %struct.TYPE_15__*) #1

declare dso_local i64 @strchr(i8*, i8 signext) #1

declare dso_local i32 @setnilvalue(i64) #1

declare dso_local i32 @setclvalue(%struct.TYPE_13__*, i64, i32*) #1

declare dso_local i32 @incr_top(%struct.TYPE_13__*) #1

declare dso_local i32 @collectvalidlines(%struct.TYPE_13__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
